[package]
name = "ppa"
version = "0.1.0"
authors = ["Celeo <mattboulanger@fastmail.com>"]
edition = "2018"
description = "Password Protection App"
readme = "README.md"
homepage = "https://github.com/celeo/ppa"
repository = "https://github.com/celeo/ppa"
license = "MIT OR Apache-2.0"
exclude = [
  ".github"
]
keywords = []
categories = [
  "command-line-utilities",
]

[dependencies]
aes-gcm = "0.7.0"
anyhow = "1.0.32"
clap = "2.33.3"
clipboard = "0.5.0"
dialoguer = "0.6.2"
fern = { version = "0.6.0", features = ["colored"] }
fuzzy-matcher = "0.3.6"
home = "0.5.3"
log = "0.4.11"
prettytable-rs = "0.8.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
structopt = "0.3.18"
